# contextforge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES_README.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  TEST_SUMMARY.md  core.py  example_agent.py  examples_requirements.txt  memory.py  providers.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  retrieval.py  run_tests.py  setup.py  tools.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
contextforge/: __init__.py  core.py  memory.py  providers.py  py.typed  retrieval.py  utils.py
contextforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: conf.py  index.rst
examples/: advanced_patterns.py  basic_usage.py
scripts/: publish.py
tests/: README.md  __init__.py  conftest.py  test_core.py  test_coverage_100.py  test_integration.py  test_memory.py  test_providers.py  test_retrieval.py  test_tools.py  test_utils.py
